# hometest

./: .env.example  .gitignore  DEVELOPMENT_NOTES.md  Makefile  README.md  TechTask.md  openapi.json  pyproject.toml  test_main.http
app/: main.py
app/api/v1/: dependencies.py  utils.py
app/api/v1/routers/: geolocation.py
app/clients/: ip_api.py
app/core/: config.py  exceptions.py
app/models/: errors.py  geolocation.py
app/services/: geolocation.py
tests/: conftest.py
tests/integration/: test_geolocation_api.py
tests/unit/: test_geolocation_service.py  test_utils.py
